src/test/ui/const-eval/promoted_const_fn_fail.stderr
error: this expression will panic at runtime
  --> $DIR/promoted_const_fn_fail.rs:25:9
   |
LL |         Bar { a: &42 }.b as u8
   |         ^^^^^^^^^^^^^^^^^^^^^^ a raw memory access tried to access part of a pointer value as raw bytes
   |
note: lint level defined here
  --> $DIR/promoted_const_fn_fail.rs:13:9
   |
LL | #![deny(const_err)]
   |         ^^^^^^^^^

error: this expression will panic at runtime
  --> $DIR/promoted_const_fn_fail.rs:25:9
   |
LL |         Bar { a: &42 }.b as u8
   |         ^^^^^^^^^^^^^^^^^^^^^^ a raw memory access tried to access part of a pointer value as raw bytes

error: aborting due to 2 previous errors

